feat: enable registration refactor: remove gitlab ci files

--- a/web/auth/locales/en/common.json
+++ b/web/auth/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "logIn": "Log in",
   "logOut": "Log out",
+  "signUp": "Sign up",
   "email": "e-mail",
   "name": "name",
   "password": "password",
