feat: add gitlab, github registry types feat: add organization prefix to hub registries fix: home link in team page fix: adding multiple images from different registries in the same batch

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -14,6 +14,7 @@
   "type": "Type",
   "status": "Status",
   "loading": "Loading...",
+  "noNameFound": "No {{name}} found",
   "yourTeams": "Your teams",
 
   "editName": "Edit {{name}}",
@@ -42,6 +43,7 @@
   "config": "Config",
   "registries": "Registries",
   "nodes": "Nodes",
+  "images": "Images",
   "settings": "Settings",
   "team": "Team",
   "audit": "Audit Log",
