feat: display agent version
Done:
 - agent compile-time version (grpc, http)
 - display version on the node edit screen

--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -19,6 +19,8 @@
   "command": "Command",
   "script": "Script",
   "uptime": "Uptime",
+  "version": "Version",
+  "versionUnknown": "Unkown version",
 
   "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable."
 }
