--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -25,5 +25,7 @@
     "github": "GitHub Registry"
   },
 
-  "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable."
+  "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable.",
+
+  "altDefaultRegistryPicture": "Picture of registry"
 }
