fix: image edit websocket errors feat: add container name to image editing

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -63,6 +63,8 @@
 
   "product": "Product",
   "version": "Version",
+  "image": "Image",
+  "container": "Container",
   "deployment": "Deployment",
   "node": "Node",
   "registry": "Registry",
