--- a/web/crux-ui/locales/en/images.json
+++ b/web/crux-ui/locales/en/images.json
@@ -1,6 +1,7 @@
 {
     "add": "Add image",
     "imageName": "Image name",
+    "containerName": "Container name",
     "tag": "Tag",
     "config": "Config",
     "json": "JSON",
