--- a/web/crux-ui/locales/en/products.json
+++ b/web/crux-ui/locales/en/products.json
@@ -4,7 +4,7 @@
 
   "add": "Add product",
   "new": "New product",
-  "tips": "A description about what products are good for.",
+  "tips": "Products are your applications made up from images available in Registries.",
 
   "name": "Name",
   "description": "Description",
