--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -3,7 +3,6 @@
   "title-registry": "{{name}} registry",
 
   "registries": "Registries",
-  "tips": "A description about what registries are good for.",
   "add": "Add registry",
   "new": "New registry",
   "user": "User",
@@ -11,7 +10,6 @@
   "pat": "Personal access token",
   "accessToken": "Access token",
   "url": "Url",
-  "hubTips": "Disclaimer: You can use only public Docker HUB images.",
   "orgOrUser": "Organization name or username",
   "organization": "Organization name",
   "group": "Group name",
@@ -20,6 +18,14 @@
   "selfManaged": "Self-managed Gitlab",
   "saas": "SaaS",
   "apiUrl": "Gitlab api url",
+
+  "tips": {
+    "common": "Registries contain the images you can select to create new Products.",
+    "v2": "Here you can add Docker API V2 compatible registries.",
+    "hub": "Here you're able to add public Docker Hub registries.",
+    "gitlab": "Add your GitLab Registry.",
+    "github": "Add your GitHub Registry."
+  },
 
   "type": {
     "v2": "V2 Registry",
