clean: review corrections, cleanups

--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -10,23 +10,17 @@
   "confirmRevoke": "Are you sure you want to revoke the token?",
 
   "setup": "Install the agent",
-  "installScript": "Generate script",
+  "generateScript": "Generate script",
   "scriptExpiresIn": "The script expires in:",
   "address": "Address",
   "status": "Status",
   "explanationHeader": "What does this script do?",
-  "explanation": "The following 'Generate scipt' button will create a  one-liner and script that will install our agent to the target host with the selected technology.",
+  "explanation": "The following 'Generate scipt' button will create a one-liner and script that will install our agent to the target host with the selected technology.",
   "requirementsHeader": "Requirements",
-  "requirements-k8s": [
-    "A kubernetes cluster",
-    "kubectl authenticated, active context selected",
-    "Ability to run these commands"
-  ],
-  "requirements-docker": [
-    "A linux host/VPS",
-    "Docker or podman installed on host",
-    "Ability to execute the script on host"
-  ],
+  "requirements": {
+    "k8s": ["A kubernetes cluster", "kubectl authenticated, active context selected", "Ability to run these commands"],
+    "docker": ["A linux host/VPS", "Docker or podman installed on host", "Ability to execute the script on host"]
+  },
   "saveYourNode": "Please save your node to begin the setup process.",
   "connection": "Connection",
   "connectionExplanation": "If the setup was successful, you will see your node appear here.",
