--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -9,13 +9,18 @@
   "revoke": "Revoke token",
   "confirmRevoke": "Are you sure you want to revoke the token?",
 
-  "setup": "Setup",
-  "installScript": "Install script",
+  "setup": "Install the agent",
+  "generateScript": "Generate script",
   "scriptExpiresIn": "The script expires in:",
   "address": "Address",
-  "aboutScript": "Requirements",
   "status": "Status",
-  "setupExplanation": "A host running Docker compatible container daemon",
+  "whatScriptDoesHeader": "What does this script do?",
+  "scriptExplanation": "The following 'Generate scipt' button will create a one-liner and script that will install our agent to the target host with the selected technology.",
+  "requirementsHeader": "Requirements",
+  "requirements": {
+    "k8s": ["A kubernetes cluster", "kubectl authenticated, active context selected", "Ability to run these commands"],
+    "docker": ["A linux host/VPS", "Docker or podman installed on host", "Ability to execute the script on host"]
+  },
   "saveYourNode": "Please save your node to begin the setup process.",
   "connection": "Connection",
   "connectionExplanation": "If the setup was successful, you will see your node appear here.",
@@ -24,6 +29,10 @@
   "uptime": "Uptime",
   "version": "Version",
   "versionUnknown": "Unkown version",
-
+  "technology": "Technology",
+  "technologies": {
+    "docker": "Docker Host",
+    "k8s": "Kubernetes Cluster"
+  },
   "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable."
 }
