refactor: websocket message routing

--- a/web/crux-ui/locales/en/register.json
+++ b/web/crux-ui/locales/en/register.json
@@ -3,6 +3,6 @@
   "signUp": "Sign up",
   "createAcc": "Create account",
   "signUpGoogle": "Sign up with Google",
-  "signUpGithub": "Sign up with Github",
+  "signUpGithub": "Sign up with GitHub",
   "alreadyUser": "Already a user?"
 }
