feat: paginator implement and use in auditlog
refactor: pagination hook

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -139,5 +139,8 @@
     "December"
   ],
 
-  "upload": "Upload"
+  "upload": "Upload",
+
+  "itemsPerPage": "Items per page",
+  "showingItems": "Showing {{pageFrom}} to {{pageTo}} of {{total}} entries"
 }
