fix: missing locales

--- a/web/crux-ui/locales/en/images.json
+++ b/web/crux-ui/locales/en/images.json
@@ -1,5 +1,6 @@
 {
     "add": "Add image",
+    "delete": "Delete",
     "imageName": "Image name",
     "containerName": "Container name",
     "tag": "Tag",
