fix: node card content
running color fixed and added address label

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -33,6 +33,7 @@
   "loading": "Loading...",
   "noNameFound": "No {{name}} found",
   "yourTeams": "Your teams",
+  "address": "Address",
 
   "editName": "Edit {{name}}",
   "add": "Add",
