--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -1,6 +1,5 @@
 {
-  "title": "Nodes",
-  "title-node": "{{name}} node",
+  "nodesName": "Nodes - {{name}}",
 
   "add": "Add node",
   "new": "New node",
