--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -1,6 +1,5 @@
 {
-  "title": "Registries",
-  "title-registry": "{{name}} registry",
+  "registriesName": "Registries - {{name}}",
 
   "registries": "Registries",
   "add": "Add registry",
