--- a/web/crux-ui/locales/en/deployments.json
+++ b/web/crux-ui/locales/en/deployments.json
@@ -1,5 +1,6 @@
 {
-    "title": "{{product}} product {{version}} {{node}} deployment",
+    "deploysName": "Products - {{product}} - Versions - {{version}} - Deployments - {{name}}",
+    "deploysNameDeploy": "Products - {{product}} - Versions - {{version}} - Deployments - {{name}} - Deploy",
     "log": "Log",
     "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable.",
     "environmentConfig": "Environment config",
