--- a/web/crux-ui/locales/en/products.json
+++ b/web/crux-ui/locales/en/products.json
@@ -1,6 +1,5 @@
 {
-  "title": "Products",
-  "title-product": "{{name}} product",
+  "productsName": "Products - {{name}}",
 
   "add": "Add product",
   "new": "New product",
