--- a/web/crux-ui/locales/en/versions.json
+++ b/web/crux-ui/locales/en/versions.json
@@ -1,5 +1,5 @@
 {
-    "title-product-version": "{{name}} product {{version}}",
+    "versionsName": "Products - {{product}} - Versions - {{name}}",
 
     "tips": "TODO: Version tips",
     "new": "New version",
