--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -27,7 +27,7 @@
   "icon": "Icon",
   "updatedAt": "Update at",
   "createdAt": "Created at",
-  "createdBy" : "Created by {{name}}",
+  "createdByName" : "Created by {{name}}",
   "date": "Date",
   "type": "Type",
   "status": "Status",
@@ -146,7 +146,7 @@
 
   "upload": "Upload",
 
-  "defaultDeleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable.",
+  "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable.",
   
   "itemsPerPage": "Items per page",
   "showingItems": "Showing {{pageFrom}} to {{pageTo}} of {{total}} entries"
