--- a/web/crux-ui/locales/en/invite.json
+++ b/web/crux-ui/locales/en/invite.json
@@ -1,7 +1,7 @@
 {
     "welcome": "Welcome!",
     "youAreInvited": "You're invited to join dyrector.io",
-    "pleaseAccept": "Please, click the button below, to accept the invitation.",
+    "pleaseAccept": "Please, click the button below to accept the invitation.",
     "accept": "Accept",
     "expired": "Invitation expired",
     "pleaseContact": "Please contact an administrator."
