--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -27,6 +27,7 @@
   "icon": "Icon",
   "updatedAt": "Update at",
   "createdAt": "Created at",
+  "createdByName" : "Created by {{name}}",
   "date": "Date",
   "type": "Type",
   "status": "Status",
@@ -55,6 +56,7 @@
   "config": "Config",
   "registries": "Registries",
   "nodes": "Nodes",
+  "notifications": "Notifications",
   "images": "Images",
   "team": "Team",
   "audit": "Audit Log",
@@ -69,6 +71,7 @@
   "deployment": "Deployment",
   "node": "Node",
   "registry": "Registry",
+  "notification": "Notification",
 
   "prefix": "Prefix",
 
@@ -143,6 +146,8 @@
 
   "upload": "Upload",
 
+  "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable.",
+  
   "itemsPerPage": "Items per page",
   "showingItems": "Showing {{pageFrom}} to {{pageTo}} of {{total}} entries"
 }
