feat: team rework (#79)
 feat: create teams regardless of membership in other teams.
 feat: manage team without it being active.
 feat: users can be promoted to Admins. Admins can do the same things as the Owner except deleting the team itself.

--- a/web/crux-ui/locales/en/deployments.json
+++ b/web/crux-ui/locales/en/deployments.json
@@ -1,5 +1,6 @@
 {
-    "title": "{{product}} product {{version}} {{node}} deployment",
+    "deploysName": "Products - {{product}} - Versions - {{version}} - Deployments - {{name}}",
+    "deploysNameDeploy": "Products - {{product}} - Versions - {{version}} - Deployments - {{name}} - Deploy",
     "log": "Log",
     "environmentConfig": "Environment config",
     "created": "Created"
