--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -75,6 +75,9 @@
   "container": "Container",
   "node": "Node",
   "registry": "Registry",
+  "deployment": "Deployment",
+  "product": "Product",
+  "version": "Version",
 
   "prefix": "Prefix",
 
