fix(crux-ui): add diff box-shadow and improve minor stylistic issues

--- a/web/crux-ui/locales/en/notifications.json
+++ b/web/crux-ui/locales/en/notifications.json
@@ -11,7 +11,7 @@
   "type": {
     "discord": "Discord",
     "slack": "Slack",
-    "teams": "MS Teams"
+    "teams": "Microsoft Teams"
   },
 
   "active": "Active",
