--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -16,7 +16,7 @@
   "private": "Private",
   "selfManaged": "Self-managed GitLab",
   "saas": "SaaS",
-  "apiUrl": "GitLab api URL",
+  "apiUrl": "GitLab API URL",
   "keyFile": "Key file",
   "privateKey": "Private key",
 
