feat: separate status page from page 500

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -2,7 +2,7 @@
   "logIn": "Log in",
   "logOut": "Log out",
   "signUp": "Sign up",
-  "email": "e-mail",
+  "email": "E-mail",
   "name": "Name",
   "password": "Password",
   "confirmPass": "Confirm password",
