--- a/web/crux-ui/locales/en/images.json
+++ b/web/crux-ui/locales/en/images.json
@@ -10,5 +10,6 @@
   "environment": "Environment",
   "capabilities": "Capabilities",
   "selectTag": "You must select a tag",
-  "noItems": "You haven't added an image to this version. Click 'Add image' to browse images you can add."
+  "noItems": "You haven't added an image to this version. Click 'Add image' to browse images you can add.",
+  "secrets": "Secrets"
 }
