feat(crux-ui): impove profile page

--- a/web/crux-ui/locales/en/settings.json
+++ b/web/crux-ui/locales/en/settings.json
@@ -1,5 +1,6 @@
 {
   "title": "Profile",
+  "tips": "Change your password, e-mail address or name",
   "profile": "Profile",
   "changePass": "Change password",
   "editProfile": "Edit profile",
