feat: default product rework

--- a/web/crux-ui/locales/en/badges.json
+++ b/web/crux-ui/locales/en/badges.json
@@ -1,8 +1,33 @@
 {
-  "dog": "Dog",
+  "goat": "Goat",
+  "jellyfish": "Jellyfish",
+  "kangaroo": "Kangaroo",
   "shark": "Shark",
-  "penguin": "Penguin",
-  "monkey": "Monkey",
+  "sloth": "Sloth",
+  "buffalo": "Buffalo",
+  "cat": "Cat",
+  "llama": "Llama",
+  "bug": "Bug",
+  "shrimp": "Shrimp",
+  "donkey": "Donkey",
+  "flamingo": "Flamingo",
   "lion": "Lion",
-  "kangaroo": "Kangaroo"
+  "hedgehog": "Hedgehog",
+  "giraffe": "Giraffe",
+  "penguin": "Penguin",
+  "bat": "Bat",
+  "goose": "Goose",
+  "seal": "Seal",
+  "spider": "Spider",
+  "squirrel": "Squirrel",
+  "monkey": "Monkey",
+  "gecko": "Gecko",
+  "owl": "Owl",
+  "dog": "Dog",
+  "rhino": "Rhino",
+  "bee": "Bee",
+  "dino": "Dino",
+  "sheep": "Sheep",
+  "crow": "Crow",
+  "snail": "Snail"  
 }
