fix: image button

--- a/web/crux-ui/locales/en/status.json
+++ b/web/crux-ui/locales/en/status.json
@@ -7,7 +7,7 @@
     "version": "Version",
     "unknown": "Unknown",
 
-    "serviceStatuses": {
+    "status": {
         "unavailable": "Unavailable",
         "disrupted": "Disrupted",
         "operational": "Operational"
