--- a/web/crux-ui/locales/en/products.json
+++ b/web/crux-ui/locales/en/products.json
@@ -16,6 +16,7 @@
   "addVersion": "Add version",
 
   "deleteDescription": "If you proceed, you will lose all your data related to {{name}}, all configurations, all verison history, all deployments. This action is not revocable.",
+  "setNameAsDefault": "If you set {{name}} as the default version, all newly created versions will contain the same images by default.",
 
   "errors": {
     "alreadyExists": "Product name taken."
