fix: opensource text to i18n and add alt to Image in paginator

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -157,5 +157,7 @@
   "deleteDescription": "If you proceed, you will lose all your data related to {{name}}. This action is not revocable.",
 
   "itemsPerPage": "Items per page",
-  "showingItems": "Showing {{pageFrom}} to {{pageTo}} of {{total}} entries"
+  "showingItems": "Showing {{pageFrom}} to {{pageTo}} of {{total}} entries",
+
+  "openSource": "is an Open Source project"
 }
