fix(crux-ui): review suggestions

--- a/web/crux-ui/locales/en/audit.json
+++ b/web/crux-ui/locales/en/audit.json
@@ -1,5 +1,5 @@
 {
   "event": "Event",
   "info": "Info",
-  "noItems": "Sorry, there's no activity which we could've logged. Add a registry to start onboarding."
+  "noItems": "Sorry, there's no activity which we could've logged."
 }
