feat(crux-ui): no data to display notices (#132)
* feat(crux-ui): no data to display notices

--- a/web/crux-ui/locales/en/audit.json
+++ b/web/crux-ui/locales/en/audit.json
@@ -1,4 +1,5 @@
 {
-    "event": "Event",
-    "info": "Info"
+  "event": "Event",
+  "info": "Info",
+  "noItems": "Sorry, there's no activity which we could've logged."
 }
