fix(crux-ui): auditlog table and modal layout

--- a/web/crux-ui/locales/en/audit.json
+++ b/web/crux-ui/locales/en/audit.json
@@ -1,5 +1,5 @@
 {
   "event": "Event",
-  "info": "Info",
+  "data": "Data",
   "noItems": "Sorry, there's no activity which we could've logged."
 }
