fix: labels and hide button if empty

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -8,6 +8,7 @@
   "confirmPass": "Confirm password",
   "send": "Send",
   "resend": "Resend",
+  "clear": "Clear",
 
   "goBack": "Go back",
   "back": "Back",
