fix(web): deployment improvements

--- a/web/crux-ui/locales/en/versions.json
+++ b/web/crux-ui/locales/en/versions.json
@@ -27,5 +27,6 @@
   "addDeployment": "Add deployment",
   "addImage": "Add image",
 
-  "deploymentName": "Deployment name"
+  "deploymentName": "Deployment name",
+  "alreadyHavePreparing": "You already have one preparing deployment!"
 }
