feat(crux-ui): add node status filter

--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -33,5 +33,10 @@
   "technologies": {
     "docker": "Docker Host",
     "k8s": "Kubernetes Cluster"
+  },
+  "statusFilters": {
+    "all": "All",
+    "active": "Active",
+    "inactive": "Inactive"
   }
 }
