feat(crux-ui): change registry url error

--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -38,5 +38,8 @@
     "google": "Google Registry"
   },
 
-  "altDefaultRegistryPicture": "Picture of registry"
+  "altDefaultRegistryPicture": "Picture of registry",
+  "errors": {
+    "invalidArgument": "Registry with the given URL doesn't exist"
+  }
 }
