--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -93,7 +93,7 @@
   "minutesAgo": "{{minutes}} minutes ago",
   "hoursAgo": "{{hours}} hours ago",
   "daysAgo": "{{days}} daysAgo",
-  "dateFormat": "yyyy/MM/dd",
+  "dateFormat": "yyyy. MM. dd.",
 
   "key": "Key",
   "value": "Value",
