--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -35,9 +35,8 @@
     "k8s": "Kubernetes Cluster"
   },
   "statusFilters": {
-    "all": "All",
-    "active": "Active",
-    "inactive": "Inactive"
+    "running": "Running",
+    "unreachable": "Unreachable"
   },
   "rootPath": "Root path",
   "rootPathHint": "Optional, leave empty for default paths"
