--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -92,7 +92,7 @@
   "secondsAgo": "{{seconds}} seconds ago",
   "minutesAgo": "{{minutes}} minutes ago",
   "hoursAgo": "{{hours}} hours ago",
-  "daysAgo": "{{days}} daysAgo",
+  "daysAgo": "{{days}} days ago",
   "dateFormat": "yyyy. MM. dd.",
 
   "key": "Key",
@@ -166,5 +166,6 @@
   "itemsPerPage": "Items per page",
   "showingItems": "Showing {{pageFrom}} to {{pageTo}} of {{total}} entries",
   "openSource": "is an Open Source project",
-  "cannotDefineSecretsHere": "Secret keys can be provided here, values can be set in deployments."
+  "cannotDefineSecretsHere": "Secret keys can be provided here, values can be set in deployments.",
+  "notFound": "Not Found"
 }
