--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -167,5 +167,7 @@
   "showingItems": "Showing {{pageFrom}} to {{pageTo}} of {{total}} entries",
   "openSource": "is an Open Source project",
   "cannotDefineSecretsHere": "Secret keys can be provided here, values can be set in deployments.",
-  "notFound": "Not Found"
+  "notFound": "Not Found",
+
+  "fileUploadPlaceholder": "Select a file to upload or drag and drop it here."
 }
