--- a/web/crux-ui/locales/en/teams.json
+++ b/web/crux-ui/locales/en/teams.json
@@ -1,26 +1,27 @@
 {
-    "teamsName": "Teams - {{name}}",
-    "teamsNameInvite": "Teams - {{name}} - Invitation",
+  "teamsName": "Teams - {{name}}",
+  "teamsNameInvite": "Teams - {{name}} - Invitation",
 
-    "invite": "Invite",
-    "send": "Send",
-    "role": "Role",
-    "lastLogin": "Last login",
-    "inviteMember": "Invite team member to {{name}}",
-    "tips": "Users in your team will be able to access everything.",
+  "invite": "Invite",
+  "send": "Send",
+  "role": "Role",
+  "lastLogin": "Last login",
+  "inviteMember": "Invite team member to {{name}}",
+  "tips": "Users in your team will be able to access everything.",
 
-    "accept": "Accept",
-    "createTeam": "Create new team",
-    "youHaveBeenInvited": "You have been invited to team {{name}}",
-    "acceptSuccess": "You have successfully accepted the invitation to team {{name}}",
+  "never": "Never",
 
-    "promote": "promote",
-    "demote": "demote",
-    
+  "accept": "Accept",
+  "createTeam": "Create new team",
+  "youHaveBeenInvited": "You have been invited to team {{name}}",
+  "acceptSuccess": "You have successfully accepted the invitation to team {{name}}",
 
-    "confirmRoleAction": "You are going to {{action}} {{user}} to {{role}}.",
+  "promote": "promote",
+  "demote": "demote",
 
-    "errors": {
-        "preconditionFailed": "Invitation link expired"
-    }
+  "confirmRoleAction": "You are going to {{action}} {{user}} to {{role}}.",
+
+  "errors": {
+    "preconditionFailed": "Invitation link expired"
+  }
 }
