--- a/web/crux-ui/locales/en/images.json
+++ b/web/crux-ui/locales/en/images.json
@@ -5,6 +5,7 @@
   "tag": "Tag",
   "config": "Config",
   "json": "JSON",
+  "editor": "Editor",
   "filterMinChars": "Minimum filter length is {{length}} character",
   "availableTags": "Available tags",
   "environment": "Environment",
