feat: add node connection card fix: lint errors fix: node install script priviledge escalation

--- a/web/crux-ui/locales/en/nodes.json
+++ b/web/crux-ui/locales/en/nodes.json
@@ -16,8 +16,8 @@
   "status": "Status",
   "whatScriptDoesHeader": "What does this script do?",
   "scriptExplanation": "The following 'Generate scipt' button will create a one-liner and script that will install our agent to the target host with the selected technology.",
-  "requirementsHeader": "Requirements",
-  "requirements": {
+  "requirements": "Requirements",
+  "installReq": {
     "k8s": ["A kubernetes cluster", "kubectl authenticated, active context selected", "Ability to run these commands"],
     "docker": ["A linux host/VPS", "Docker or podman installed on host", "Ability to execute the script on host"]
   },
