--- a/web/crux-ui/locales/en/deployments.json
+++ b/web/crux-ui/locales/en/deployments.json
@@ -5,5 +5,6 @@
   "environmentConfig": "Environment config",
   "created": "Created",
   "actions": "Actions",
-  "noItems": "You haven't made a deployment."
+  "noItems": "You haven't made a deployment.",
+  "prefixName": "Prefix: {{name}}"
 }
