feat(crux-ui): add websocket translation
fix(crux-ui): deployment ui fixes

--- a/web/crux-ui/locales/en/deployments.json
+++ b/web/crux-ui/locales/en/deployments.json
@@ -7,5 +7,9 @@
   "actions": "Actions",
   "noItems": "You haven't made a deployment.",
   "prefixName": "Prefix: {{name}}",
-  "deploymentCopyConflictContent": "There is already a preparing deployment on the selected node. Are you sure want to overwrite?"
+  "deploymentCopyConflictContent": "There is already a preparing deployment on the selected node. Are you sure want to overwrite?",
+
+  "errors": {
+    "preconditionFailed": "Node is unreachable!"
+  }
 }
