fix: minor web fixes
refactor(crux-ui): Separate contains methods from image config
fix(crux): Add common error interceptor
fix(crux-ui): Node status indicator position center
feat(crux-ui): Add back btn to image details
fix(crux-ui): Image list actions responsive display
fix(crux-ui): Image config sections improvements
fix(crux-ui): Deployment delete navigate
fix(crux-ui): Confirmation modal cancel fix
fix(agent): Inject secret key
fix(crux): Node create get identity notification error

Co-Authored-By: Nandor Magyar <nandormagyar.it@gmail.com>

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -3,7 +3,9 @@
     "all": "All",
     "dagent": "Docker",
     "crane": "Kubernetes",
-    "common": "Common"
+    "common": "Common",
+    "filters": "Filters",
+    "subFilters": "Sub filters"
   },
 
   "common": {
@@ -12,7 +14,7 @@
     "exposePort": "Expose port",
     "portBinding": "Port binding",
     "volumes": "Volumes",
-    "capabilities": "capabilities",
+    "capabilities": "Capabilities",
     "name": "Name",
     "size": "Size",
     "path": "Path",
