feat: invite flow revamp

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -4,6 +4,8 @@
   "signUp": "Sign up",
   "email": "E-mail",
   "name": "Name",
+  "firstName": "First name",
+  "lastName": "Last name",
   "password": "Password",
   "confirmPass": "Confirm password",
   "send": "Send",
