--- a/web/crux-ui/locales/en/settings.json
+++ b/web/crux-ui/locales/en/settings.json
@@ -4,7 +4,7 @@
   "profile": "Profile",
   "changePass": "Change password",
   "editProfile": "Edit profile",
-  "firstName": "First name",
-  "lastName": "Last name",
-  "save": "Save"
+  "needToSetPassword": "You need to set a password.",
+  "noPasswordExpiredPriviledge": "Your session is too old to set a password. You need to log out and recover your account by clicking on the \"Forgot your password?\" link on the Log In page.",
+  "clickToLogout": "Click here to log out"
 }
